A problem with scrollbar fixed.

--- a/Angular_CLI/ksen-port/src/app/artworks/artworks.component.css
+++ b/Angular_CLI/ksen-port/src/app/artworks/artworks.component.css
@@ -55,3 +55,23 @@
 .img-block {
     margin: 0 0 10px 0;
 }
+
+.scrollbar {
+    height: 700px; 
+    overflow-y: scroll;
+}
+
+.scrollbar::-webkit-scrollbar {
+    width: 4px;
+    background-color: #3D3D3D;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #3D3D3D;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #444;
+}
