--- a/Angular_CLI/ksen-port/src/styles.css
+++ b/Angular_CLI/ksen-port/src/styles.css
@@ -3,3 +3,8 @@
 body {
     background-color: #313131;
 }
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
